-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: 9.0.4, 10
-
Component/s: hotspot
-
b41
-
aarch64
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8195851 | 11 | Andrew Haley | P1 | Resolved | Fixed | b01 |
| JDK-8197763 | 10u-cpu | Andrew Haley | P1 | Resolved | Fixed | master |
| JDK-8201014 | 10.0.2 | Unassigned | P1 | Resolved | Fixed | b01 |
| JDK-8196690 | 10.0.1 | Andrew Haley | P1 | Closed | Fixed | b04 |
| JDK-8197836 | 9.0.4 | Andrew Haley | P1 | Resolved | Fixed | b12 |
| JDK-8194686 | openjdk8u292 | Andrew Haley | P4 | Resolved | Fixed | b01 |
$ configure --with-jvm-variants=server --with-debug-level=fastdebug --disable-precompiled-headers --with-cpu-port=aarch64
$ make images
...
Note: Recompile with -Xlint:removal for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
Compiling 4 files for BUILD_JIGSAW_TOOLS
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x000040001409ae70, pid=25350, tid=25351
#
# JRE version: (10.0) (fastdebug build )
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 10-internal+0-adhoc.ninjia02.jdk-jdk, mixed mode, tiered, compressed oops, serial gc, linux-aarch64)
# Problematic frame:
# j java.lang.ClassLoader.findNative(Ljava/lang/ClassLoader;Ljava/lang/String;)J+16 java.base
#
# Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %d %P" (or dumping to /home/ninjia02/Work/jdk/master/jdk-jdk/make/core.25350)
#
# An error report file with more information is saved as:
The hs_err file attached.
I think it is caused by recent code merge from (?):
http://hg.openjdk.java.net/jdk/jdk10/rev/2e867226b914
Revert this patch, build pass. However, I cannot access JDK-8174962.
- backported by
-
JDK-8195851 AArch64 cannot build with JDK-8174962
-
- Resolved
-
-
JDK-8197763 AArch64 cannot build with JDK-8174962
-
- Resolved
-
-
JDK-8197836 AArch64 cannot build with JDK-8174962
-
- Resolved
-
-
JDK-8201014 AArch64 cannot build with JDK-8174962
-
- Resolved
-
-
JDK-8194686 Placeholder for AArch64 January 2018 CPU
-
- Resolved
-
-
JDK-8196690 AArch64 cannot build with JDK-8174962
-
- Closed
-
- relates to
-
JDK-8196136 AArch64: Correct register use in patch for JDK-8195685
-
- Closed
-
-
JDK-8195859 AArch64: vtableStubs gtest fails after 8174962
-
- Closed
-
-
JDK-8257192 Integrate AArch64 JIT port into 8u
-
- Resolved
-