8195685: AArch64: AArch64 cannot build with JDK-8174962

Reviewed-by: adinn, njian